syntax = "proto3";

package dss;

message MetaDataProto {
  map<string, string> tags = 1;
}
