syntax = "proto3";

package dss;

import "dss/metadata.proto";

message ShareProto {
  uint32 id = 1;
  uint32 threshold = 2;
  uint32 shares_count = 3;
  bytes data = 4;
  bytes hash = 5;
  dss.MetaDataProto meta_data = 6;
}
